--- a/src/Components/Footer/footer.module.css
+++ b/src/Components/Footer/footer.module.css
@@ -2,9 +2,14 @@ ul{
     list-style-type: none;
 }
 
+a{
+    text-decoration: none;
+}
+
 .nav_footer li{
     font-weight: 600;
     margin: 10px 0px;
+    
     
 }
 
